+Updated Resistance and Attribute buttons for character sheet header

--- a/src/styles/Mixins.scss
+++ b/src/styles/Mixins.scss
@@ -291,6 +291,8 @@
    &.willpower {
       background: var(--titan-willpower-background);
    }
+
+   --titan-button-background-disabled: var(--titan-button-background);
 }
 
 @mixin resistance-button {
